--- a/Web/webserver/views/register.pug
+++ b/Web/webserver/views/register.pug
@@ -31,10 +31,11 @@ block navigation-bar
 
 block custom-widget
   .Register
-    form(method='post')
-      // action="#" URL OF WHERE TO SEND THE DATA
-      h5  Welcome to CheckedOut! 
-      input(type='text', name='userID', required='', placeholder='Name', autocomplete='off')
-      input#email(type='text', name='email', required='', placeholder='Email', autocomplete='off')
-      input#password(type='password', name='password', required='', placeholder='Password', autocomplete='off')
-      input(type='submit', value='Register', title='Register')
+  form(onsubmit='return checkForm(this);')
+    h5  Welcome to CheckedOut! 
+    input(type='text', name='name', required='', placeholder='Name', autocomplete='off')
+    input(type='text', name='email', required='', placeholder='Enter Email', autocomplete='off')
+    input(type='text', name='email_verify', required='', placeholder='Confirm Email', autocomplete='off')
+    input(type='password', name='pwd1', required='', placeholder='Password', autocomplete='off')
+    input(type='password', name='pwd2', required='', placeholder='Confirm Password', autocomplete='off')
+    input(type='submit', value='Register', title='Register')
