--- a/Web/webserver/views/item_searched.pug
+++ b/Web/webserver/views/item_searched.pug
@@ -36,7 +36,7 @@ block content
     for item in list_items
       li
         a(href='javascript:void(0);')
-          img(src=('http:' + item.data.image))
+          img(src=(item.data.image))
           h4 #{item.data.name}
         p Price: #{item.data.price}
         p Store: #{item.data.store} 
