--- a/Android/SmartShopper/app/src/main/res/layout/fragment_acc_create.xml
+++ b/Android/SmartShopper/app/src/main/res/layout/fragment_acc_create.xml
@@ -14,15 +14,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/new_id"
+            android:layout_alignStart="@+id/id"
             android:id="@+id/title"
-            android:layout_alignEnd="@+id/new_id" />
+            android:layout_alignEnd="@+id/id" />
 
         <TextView
             android:text="Username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/new_id_indicator"
+            android:id="@+id/id_indicator"
             android:layout_marginTop="13dp"
             android:layout_below="@+id/title"
             android:layout_alignStart="@+id/title" />
@@ -32,28 +32,28 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/new_id"
-            android:layout_below="@+id/new_id_indicator"
-            android:layout_alignStart="@+id/new_pw"
-            android:layout_alignEnd="@+id/new_pw" />
+            android:id="@+id/id"
+            android:layout_below="@+id/id_indicator"
+            android:layout_alignStart="@+id/pw"
+            android:layout_alignEnd="@+id/pw" />
 
         <TextView
             android:text="Password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/new_id"
-            android:layout_alignStart="@+id/new_id"
-            android:id="@+id/new_pw_indicator" />
+            android:layout_below="@+id/id"
+            android:layout_alignStart="@+id/id"
+            android:id="@+id/pw_indicator" />
 
         <EditText
             android:layout_width="250dip"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/new_pw"
+            android:id="@+id/pw"
             android:selectAllOnFocus="false"
             android:maxLines="1"
-            android:layout_below="@+id/new_pw_indicator"
+            android:layout_below="@+id/pw_indicator"
             android:layout_centerHorizontal="true" />
 
         <TextView
@@ -61,8 +61,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/new_pw_confirm_indicator"
-            android:layout_below="@+id/new_pw"
-            android:layout_alignStart="@+id/new_pw" />
+            android:layout_below="@+id/pw"
+            android:layout_alignStart="@+id/pw" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -72,7 +72,7 @@
             android:layout_below="@+id/new_pw_confirm_indicator"
             android:layout_alignStart="@+id/new_pw_confirm_indicator"
             android:id="@+id/new_pw_confirm"
-            android:layout_alignEnd="@+id/new_pw" />
+            android:layout_alignEnd="@+id/pw" />
 
         <Button
             android:text="Create Account"
