--- a/Web/webserver/views/item_searched.pug
+++ b/Web/webserver/views/item_searched.pug
@@ -43,6 +43,7 @@ block custom-widget
   ul.products
     .row
       .col-sm-6.col-md-4
+      - item_id = 0;
       for item in list_items
         .thumbnail
           img(src=(item.data.image))
@@ -50,8 +51,9 @@ block custom-widget
             h3 #{item.data.name}
             p Price: #{item.data.price}
             p Store: #{item.data.store}
-            a.btn.btn-primary.addToCartButton(href='#', role='button') Add To Cart
+            a.btn.btn-primary.addToCartButton(href='#', role='button', id='item' + item_id) Add To Cart
             a.btn.btn-default(href='#', role='button') Visit Website
+        - item_id++;
 		
   // Modal
   #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
