--- a/Web/webserver/views/register.pug
+++ b/Web/webserver/views/register.pug
@@ -30,8 +30,7 @@ block navigation-bar
 
 block custom-widget
   .Register
-    //form(onsubmit='return checkForm(this);')
-    form(method='post')
+    form(onsubmit='return checkForm(this);' method='post')
       h5  Welcome to CheckedOut! 
       input(type='text', name='name', required='', placeholder='Name', autocomplete='off')
       input(type='text', name='email', required='', placeholder='Enter Email', autocomplete='off')
