--- a/Web/webserver/views/item_searched.pug
+++ b/Web/webserver/views/item_searched.pug
@@ -49,8 +49,7 @@ block custom-widget
           img(src=(item.data.image))
           .caption
             h3 #{item.data.name}
-            //- Print the price with two decimal places
-            p $#{(item.data.price).toFixed(2)}
+            p $#{item.data.price}
             p #{item.data.store}
             a.btn.btn-primary.addToCartButton(href='#', role='button', id='item' + item_id) Add To Cart
             a.btn.btn-default(href='#', role='button') Visit Website
