--- a/Android/SmartShopper/app/src/main/res/layout/fragment_detail.xml
+++ b/Android/SmartShopper/app/src/main/res/layout/fragment_detail.xml
@@ -34,27 +34,28 @@
             android:text="Some Store"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/product_store"
             android:layout_below="@+id/product_name"
-            android:layout_alignStart="@+id/product_name"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/product_store" />
-
-        <TextView
-            android:text="$xx.xx"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/detail_img"
-            android:layout_alignStart="@+id/product_store"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/product_price" />
+            android:layout_alignStart="@+id/product_name" />
 
         <EditText
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/quantity"
-            android:layout_marginTop="26dp"
+            android:id="@+id/quantity_to_add"
+            android:layout_marginTop="39dp"
+            android:layout_below="@+id/detail_img"
+            android:layout_alignStart="@+id/detail_img" />
+
+        <TextView
+            android:text="$xx.xx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dip"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/product_price"
             android:layout_below="@+id/detail_img"
             android:layout_alignStart="@+id/detail_img" />
 
@@ -62,10 +63,11 @@
             android:text="To Cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button"
-            android:layout_alignBottom="@+id/quantity"
-            android:layout_alignEnd="@+id/product_price"
-            android:layout_alignTop="@+id/quantity" />
+            android:id="@+id/add_to_cart"
+            android:layout_marginStart="12dp"
+            android:layout_alignBaseline="@+id/quantity_to_add"
+            android:layout_alignBottom="@+id/quantity_to_add"
+            android:layout_toEndOf="@+id/product_price" />
 
     </RelativeLayout>
 </FrameLayout>
