--- a/Android/SmartShopper/app/src/main/res/layout/fragment_acc_create.xml
+++ b/Android/SmartShopper/app/src/main/res/layout/fragment_acc_create.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/id"
-            android:id="@+id/title"
+            android:id="@+id/curr_user"
             android:layout_alignEnd="@+id/id" />
 
         <TextView
@@ -24,8 +24,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/id_indicator"
             android:layout_marginTop="13dp"
-            android:layout_below="@+id/title"
-            android:layout_alignStart="@+id/title" />
+            android:layout_below="@+id/curr_user"
+            android:layout_alignStart="@+id/curr_user" />
 
         <EditText
             android:layout_width="wrap_content"
