--- a/Web/webserver/views/register.pug
+++ b/Web/webserver/views/register.pug
@@ -26,7 +26,7 @@ block navigation-bar
               span.caret
             ul.dropdown-menu
               li
-                a(href='#') View Full Cart
+                a(href='#') View Lists
 
 block custom-widget
   .Register
@@ -35,6 +35,6 @@ block custom-widget
       input(type='text', name='name', required='', placeholder='Name', autocomplete='off')
       input(type='text', name='email', required='', placeholder='Enter Email', autocomplete='off')
       input(type='text', name='email_verify', required='', placeholder='Confirm Email', autocomplete='off')
-      input(type='password', name='pwd1', required='', placeholder='Password', autocomplete='off')
-      input(type='password', name='pwd2', required='', placeholder='Confirm Password', autocomplete='off')
+      input(type='password', name='password', required='', placeholder='Password', autocomplete='off')
+      input(type='password', name='password_verify', required='', placeholder='Confirm Password', autocomplete='off')
       input(type='submit', value='Register', title='Register')
